--- a/site/training/validator-fundamentals/developing-challenger-models.qmd
+++ b/site/training/validator-fundamentals/developing-challenger-models.qmd
@@ -530,13 +530,15 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 # Section 2 {background-color="#083E44" background-image="/assets/img/about-us-esphere.svg"}
 
-## {background-iframe="/notebooks/EXECUTED/model_development/4-finalize_testing_documentation.html" background-interactive="yes" data-preload="yes"}
+<!-- CHANGE THIS TO EXECUTED LATER -->
+
+## {background-iframe="/notebooks/tutorials/model_validation/4-finalize_validation_reporting.html" background-interactive="yes" data-preload="yes"}
 
 :::: {.absolute bottom=15 left=0 right=50 .w-100 .f4 .tc .pl4 .pr4 .overlay}
 **4 — Finalize testing and reporting**
 
 ::: {.f5}
-This is the final notebook in our introductory series, which will walk you through wrapping custom test results into your documentation, as well as how to update the configuration for the entire model documentation template to suit your needs.
+This is the final notebook in our introductory series, which will walk you through how to supplement ValidMind tests with your own custom tests and include them as additional evidence in your validation report, and wrap up your validation testing.
 :::
 
 **Scroll through this notebook** to explore. When you are done, click [{{< fa chevron-right >}}]() to continue.
@@ -582,7 +584,9 @@ As usual, let's connect back up to your model in the {{< var validmind.platform 
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
-## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html#initialize-the-validmind-library" data-preload="yes"}
+<!-- CHANGE THIS TO EXECUTED LATER -->
+
+## {background-iframe="/notebooks/tutorials/model_validation/4-finalize_validation_reporting.html#initialize-the-validmind-library" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Connect to your model**
@@ -590,7 +594,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 ::: {.f5}
 With your code snippet copied to your clipboard:
 
-1. Open **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
+1. Open **4 — Finalize testing and validation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/4-finalize_validation_reporting.ipynb){target="_blank"}
 2. Run all the cells under the **Setting up** section.
 
 :::
@@ -620,7 +624,9 @@ Let's implement a *custom test* that calculates the confusion matrix:
 :::
 ::::
 
-## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html#create-a-confusion-matrix-plot" data-preload="yes"}
+<!-- CHANGE THIS TO EXECUTED LATER -->
+
+## {background-iframe="/notebooks/tutorials/model_validation/4-finalize_validation_reporting.html#implement-a-custom-inline-test" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Implement a custom inline test**
@@ -628,8 +634,8 @@ Let's implement a *custom test* that calculates the confusion matrix:
 ::: {.f5}
 An *inline test* refers to a test written and executed within the same environment as the code being tested — in the following example, right in our Jupyter Notebook —  without requiring a separate test file or framework:
 
-1. Continue with **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
-2. Run all the cells in the following section under Implementing a custom inline test: **Create a confusion matrix plot**
+1. Continue with **4 — Finalize testing and validation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/4-finalize_validation_reporting.ipynb){target="_blank"}
+2. Run all the cells in the sections under Implementing a custom tests: **Implement a custom inline test**
 
 :::
 
@@ -637,7 +643,9 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ::::
 
-## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html#add-parameters-to-custom-tests" data-preload="yes"}
+<!-- CHANGE THIS TO EXECUTED LATER -->
+
+## {background-iframe="/notebooks/tutorials/model_validation/4-finalize_validation_reporting.html#use-external-test-providers" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Use external test providers**
@@ -645,8 +653,8 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::: {.f5}
 Sometimes you may want to reuse the same set of custom tests across multiple models and share them with others in your organization, like the model development team would have done with you in this example workflow featured in this series of notebooks. In this case, you can create an external custom test provider that will allow you to load custom tests from a local folder or a Git repository:
 
-1. Continue with **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
-2. Run all the cells in the following sections under Implementing a custom inline test: <br>**Add parameters to custom tests** / **Pass parameters to custom tests**
+1. Continue with **4 — Finalize testing and validation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/4-finalize_validation_reporting.ipynb){target="_blank"}
+2. Run all the cells in the sections under Implementing a custom tests: **Use external test providers**
 
 :::
 
@@ -656,16 +664,18 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 # Verify test runs {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html#add-parameters-to-custom-tests" data-preload="yes"}
+<!-- CHANGE THIS TO EXECUTED LATER -->
+
+## {background-iframe="/notebooks/tutorials/model_validation/4-finalize_validation_reporting.html#verify-test-runs" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Verify model development testing**
 
 ::: {.f5}
-Our final task is to verify that all the tests provided by the model development team were run and reported accurately. Note the appended `result_ids` to delineate which dataset we ran the test with for the relevant tests:
+Our final task is to verify that all the tests provided by the model development team were run and reported accurately:
 
-1. Continue with **3 — Integrate custom tests**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}
-2. Run all the cells in the following sections under Implementing a custom inline test: <br>**Add parameters to custom tests** / **Pass parameters to custom tests**
+1. Continue with **4 — Finalize testing and validation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/4-finalize_validation_reporting.ipynb){target="_blank"}
+2. Run all the cells under the **Verify test runs** section.
 
 :::
 
