--- a/site/training/validator-fundamentals/developing-challenger-models.qmd
+++ b/site/training/validator-fundamentals/developing-challenger-models.qmd
@@ -696,10 +696,11 @@ Developing challenger models
 ::: {.column width="70%" .bl .pl4 .f3}
 In this third module, you learned how to:
 
+- [x] Initialize {{< var vm.product >}} `Model` objects
+- [x] Log a model finding within your validation report
 - [x] Implement, run, and log custom inline tests
 - [x] Register external test providers for reusable custom tests
-- [x] Include custom test results in your documentation template
-- [x] Configure your model's documentation template
+- [x] Verify testing done by model development using {{< var vm.product >}}
 
 :::
 ::::
