--- a/site/guide/model-documentation/_collaborate-with-others-comments.qmd
+++ b/site/guide/model-documentation/_collaborate-with-others-comments.qmd
@@ -1,6 +1,6 @@
 ### Post comments
 
-1. In any section of the model documentation, select the portion of text you want to comment on, then click the **{{< fa message >}}** button that appears.
+1. In any text block or test description, select the portion of text you want to comment on, then click the **{{< fa message >}}** button that appears.
 
 2. Enter your comment and click **Comment**.
 
