--- a/site/training/developer-fundamentals/finalizing-model-documentation.qmd
+++ b/site/training/developer-fundamentals/finalizing-model-documentation.qmd
@@ -208,11 +208,11 @@ You can also use the content editing toolbar to revise the description of test r
 
 For example:
 
-1. Locate the Data Preparation section and click on **2.3 Correlations and Interactions** to expand that section.
+1. Within your model documentation, locate the Data Preparation section and click on **2.3 Correlations and Interactions** to expand that section.
 
 2. Click on the text to edit the description for our individually inserted `HighPearsonCorrelation:balanced_raw_dataset` test:
 
-  ![Screenshot showing description added to the new content block](/notebooks/images/high-pearson-correlation-block.png){fig-alt="Screenshot showing description added to the new content block" .screenshot}
+  ![Editor for a test result description](/notebooks/images/high-pearson-correlation-block.png){fig-alt="Screenshot showing the editor for a test result description" .screenshot}
 
 :::
 
