--- a/site/training/validator-fundamentals/finalizing-validation-reports.qmd
+++ b/site/training/validator-fundamentals/finalizing-validation-reports.qmd
@@ -113,64 +113,6 @@ Be sure to return to this page afterwards.
 
 # Refine validation report {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {.scrollable .center}
-
-:::: {.columns}
-::: {.column width="30%" .pr4 .f2}
-Review test results
-
-::: {.f5 .nt2 .pl2 .mb4}
-(Scroll down for the full instructions.)
-:::
-
-::: {.tc}
-
-[Learn more ...](/guide/model-documentation/work-with-test-results.qmd){.button target="_blank"}
-
-:::
-
-<br>Try it **live** on the next page. {{< fa hand-point-right >}}
-
-:::
-
-::: {.column width="70%" .bl .pl4 .f4}
-
-{{< include /guide/model-documentation/_test-result-metadata.qmd >}}
-
-### View test result metadata
-
-From the {{< var validmind.platform >}}:
-
-1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
-
-2. Select the name of your model you registered for this course to open up the model details page.
-
-3. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
-
-{{< include /guide/model-documentation/_view-test-result-metadata.qmd >}}
-
-
-
-:::
-::::
-
-## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
-
-:::: {.absolute bottom=0 left=50 right=50 .w-95 .f4 .tc .pl4 .overlay}
-**Review model documentation**
-
-::: {.f5}
-1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
-2. On the left sidebar that appears for your model, click **Documentation**.
-3. Click into any section of the documentation to review the test results logged via the {{< var validmind.developer >}}. <br>
-  For example: **2.3 Correlations and Interactions** / **3.2 Model Evaluation**
-
-:::
-
-When you're done taking a look around, click [{{< fa chevron-right >}}]() to continue.
-
-::::
-
 ## {.scrollable}
 
 :::: {.columns}
@@ -195,7 +137,13 @@ Make qualitative edits
 
 ### Add content blocks
 
-In any section of your model documentation, hover your mouse over the space where you want your new block to go until a horizontal dashed line with a {{< fa square-plus >}} sign appears that indicates you can insert a new block:
+1. From the **{{< fa cubes >}} Inventory** in the {{< var validmind.platform >}}, go to the model you connected to earlier.
+
+2. In the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
+
+3. Click on **1. Executive Summary** to expand and add content to that section.
+
+4. Hover your mouse over the space where you want your new block to go until a horizontal dashed line with a {{< fa square-plus >}} sign appears that indicates you can insert a new block:
 
   ![Adding a content block in the UI](/guide/model-documentation/add-content-block.gif){width=90% fig-alt="A gif showing the process of adding a content block in the UI" .screenshot}
 
@@ -208,11 +156,15 @@ You can also use the content editing toolbar to revise the description of test r
 
 For example:
 
-1. Locate the Data Preparation section and click on **2.3 Correlations and Interactions** to expand that section.
+1. Within your validation report, click on **2.2.1. Data Quality** to expand that section and locate the linked Class Imbalance Assessment evidence.
 
-2. Edit the description for our individually inserted `HighPearsonCorrelation:balanced_raw_dataset` test:
+2. Click **See evidence details** to review the LLM-generated description that summarizes the test results, that confirm that our final preprocessed dataset actually passes our test.
 
-  ![Screenshot showing description added to the new content block](/notebooks/images/high-pearson-correlation-block.png){fig-alt="Screenshot showing description added to the new content block" .screenshot}
+<!-- NEED A NEW IMAGE WHEN TESTED -->
+
+3. Edit the description for our individually inserted `ClassImbalance:raw_dataset_preprocessed` test:
+
+  ![Editor for a test result description](/notebooks/images/high-pearson-correlation-block.png){fig-alt="Screenshot showing the editor for a test result description" .screenshot}
 
 :::
 
@@ -226,8 +178,72 @@ For example:
 
 ::: {.f5}
 1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
-2. On the left sidebar that appears for your model, click **Documentation**.
-3. Click into any section of the documentation to add or edit a content block.
+2. On the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
+3. Click on **1. Executive Summary** to add and edit a content block.
+4. Click on **2.2.1. Data Quality** to edit the description for the linked Class Imbalance Assessment test results.
+
+:::
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
+## {.scrollable}
+
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+Assess compliance
+
+::: {.f5 .nt2 .pl2 .mb4}
+(Scroll down for the full instructions.)
+:::
+
+::: {.tc}
+[Learn more ...](/guide/model-validation/assess-compliance.qmd#provide-compliance-assessments){.button target="_blank"}
+
+:::
+
+<br>Try it **live** on the next page. {{< fa hand-point-right >}}
+:::
+
+::: {.column width="70%" .bl .pl4 .f4}
+
+::: {.panel-tabset}
+
+### Add risk assessment notes
+
+1. From the **{{< fa cubes >}} Inventory** in the {{< var validmind.platform >}}, go to the model you connected to earlier.
+
+2. In the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
+
+3. Click on **2.2.1. Data Quality** to expand that section and locate the Class Imbalance Assessment sub-section.
+
+4. Click under **Risk Assessment Notes** to edit the content block using the content editing toolbar. 
+
+    For example, use **{{< fa diamond >}} <sup>[beta]{.smallcaps}</sup> (Generate Text with AI)** to create a draft summarizing the contents of the Class Imbalance Assessment sub-section.
+
+      ![Sample compliance assessment](class-imbalance-assessment.png){width=90% fig-alt="A screenshot showing a sample compliance assessment" .screenshot}
+
+### Provide compliance assessments
+
+In the same Class Imbalance Assessment sub-section, above the Risk Assessment Notes, locate the Guideline with the **[assessment]{.smallcaps}** drop-down.
+
+{{< include /guide/model-validation/_assess-compliance-assess.qmd >}}
+
+:::
+
+:::
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
+
+:::: {.absolute bottom=0 left=50 right=50 .w-95 .f4 .tc .pl4 .overlay}
+**Add your compliance assessments**
+
+::: {.f5}
+1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
+2. On the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
+3. Click on **2.2.1. Data Quality** to assess compliance for the Class Imbalance Assessment sub-section.
 
 :::
 
@@ -327,11 +343,11 @@ Comment threads
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
 :::: {.absolute bottom=0 left=50 right=50 .w-95 .f4 .tc .pl4 .overlay}
-**Comment on model documentation**
+**Comment on a text block**
 
 ::: {.f5}
 1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
-2. In the left sidebar that appears for your model, click **Documentation**.
+2. In the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
 3. **In the content block you added earlier:** Post a comment, reply to it, and then resolve the thread.
 
 :::
@@ -390,7 +406,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Finalizing model documentation
+Finalizing validation reports
 
 
 ::: {.f3}
@@ -413,10 +429,10 @@ In this final module, you learned how to:
 
 ::: {.f2}
 <br>
-There is more that {{< var vm.product >}} can do to help you create model documentation, from using your own template to code samples you can adapt for your own use case:
+There is more that {{< var vm.product >}} can do to help you validate models, from using your own template to code samples you can adapt for your own use case:
 :::
 
 ::: {.tc}
-[All model documentation guides](/guide/guides.qmd#model-documentation){.button target="_blank"}
+[All model validation guides](/guide/guides.qmd#model-validation){.button target="_blank"}
 
 :::
