--- a/site/guide/model-documentation/_collaborate-with-others-activity.qmd
+++ b/site/guide/model-documentation/_collaborate-with-others-activity.qmd
@@ -1,12 +1,12 @@
 :::: {.content-visible unless-format="revealjs"}
-While working with content blocks in documentation,^[[Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd)] you can comment directly on specific portions of the text.
+While working with content blocks,^[[Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd)] you can comment directly on specific portions of the text.
 
 All users associated with a model, such as model developers and model validators, will see a notification that a comment has been posted in their **Recent Activity** feed, accessible via the **{{< fa home >}} Dashboard**.^[[Customize your dashboard](/guide/configuration/customize-your-dashboard.qmd)]
 
 ::::
 
 :::: {.content-hidden unless-format="revealjs"}
-While working with content blocks in documentation, you can comment directly on specific portions of the text.
+While working with content blocks, you can comment directly on specific portions of the text.
 
 All users associated with a model, such as model developers and model validators, will see a notification that a comment has been posted in their **Recent Activity** feed, accessible via the [**{{< fa home >}} Dashboard**](/guide/configuration/customize-your-dashboard.qmd){target="_blank"}.
 
