--- a/site/guide/model-validation/_assess-compliance-assess.qmd
+++ b/site/guide/model-validation/_assess-compliance-assess.qmd
@@ -27,15 +27,7 @@
 ::::
 
 :::: {.content-hidden unless-format="revealjs"}
-1. Select a model or [find your model by applying a filter or searching for it](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models){target="_blank"}.
-
-1. In the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**. 
-
-   You can now expand any subsection of the validation report you would like to work with.
-
-   For example, locate 2. Validation then select **2.1.1. Assumptions**.
-
-1. In any section of the documentation where the **[assessment]{.smallcaps}** dropdown menu is available, select one of the available options:
+Select one of the available options:
 
    - **No compliance** — No tests have been run and no other evidence has been provided.
    - **Some compliance** — Evidence provided but not properly documented or verifiable.
