--- a/site/training/validator-fundamentals/finalizing-validation-reports.qmd
+++ b/site/training/validator-fundamentals/finalizing-validation-reports.qmd
@@ -40,13 +40,27 @@ This final module is part of a four-part series:
 
 ## Module 4 — Contents {.center}
 
-::: {.f2}
-1. [Refine validation report](#refine-validation-report)
-3. [Submit validation report for approval](#submit-report-for-approval)
-4. [Collaborate with others](#collaborate-with-others)
-5. [Track model activity](#track-model-activity)
+
+:::: {.columns .f3}
+
+::: {.column width="50%" .mt4 .pr4}
+### Section 1
+
+- [Refine validation report](#refine-validation-report)
+- [Review model findings](#review-model-findings)
+- [Submit validation report for approval](#submit-report-for-approval)
 
 :::
+
+::: {.column width="50%" .mt4}
+### Section 2
+
+- [Collaborate with others](#collaborate-with-others)
+- [Track model activity](#track-model-activity)
+- [View analytics](#view-analytics)
+:::
+
+::::
 
 First, let's make sure you can log in to {{< var vm.product >}}.
 
@@ -110,6 +124,8 @@ Be sure to return to this page afterwards.
 
 
 :::
+
+# Section 1 {background-color="#083E44" background-image="/assets/img/about-us-esphere.svg"}
 
 # Refine validation report {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
@@ -251,6 +267,9 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
+# Review model findings {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+
+
 # Submit report for approval {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {.scrollable}
@@ -308,6 +327,8 @@ To transition through the approval workflow, all required workflow steps must be
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
+
+# Section 2 {background-color="#083E44" background-image="/assets/img/about-us-esphere.svg"}
 
 # Collaborate with others {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
@@ -398,6 +419,8 @@ Track changes & updates
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
+
+# View analytics {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 
 # In summary {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
