--- a/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
+++ b/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
@@ -42,9 +42,10 @@ This first module is part of a four-part series:
 
 ::: {.f2}
 1. [{{< var vm.product >}} for model validation](#validmind-for-model-validation)
-2. [Connect to your champion model](#connect-to-a-model)
-3. [Preview your model's validation report template](#preview-validation-report)
-4. [Review submitted model documentation](#review-model-documentation)
+2. [The {{< var validmind.platform >}}](#the-validmind-platform)
+3. [Connect to your champion model](#connect-to-a-model)
+4. [Preview your model's validation report template](#preview-validation-report)
+5. [Review submitted model documentation](#review-model-documentation)
 
 :::
 
@@ -156,11 +157,13 @@ For now, **scroll through this notebook** to explore. When you are done, click [
 
 ::::
 
-# Connect to a model {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+<!-- USING THE VARIABLE BELOW MESSES UP THE ANCHOR LINK -->
+
+# The ValidMind Platform {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {background-iframe="https://app.prod.validmind.ai" background-interactive="true" data-preload="yes"}
 
-::: {.fr .f4 .nr5 .pa5 .overlay}
+::: {.fr .f5 .nr5 .pa5 .overlay}
 **Welcome to the {{< var validmind.platform >}}**
 
 From here, you can:
@@ -168,6 +171,7 @@ From here, you can:
 - Keep track of your models in the <br>customizable inventory ...
 - Review model documentation <br> submitted by model developers ...
 - Assess the compliance of models by <br>logging findings and test results as <br>evidence on validation reports ...
+- View analytics on your models and findings, <br>and create custom reports ...
 - ... and much more!
 
 ::: {.f5 .pl3 .pr3 .embed}
@@ -176,11 +180,10 @@ From here, you can:
 Make sure you're logged in and have refreshed<br> the page in a Chromium-based browser.
 :::
 
-When you're done navigating around, 
+When you're done navigating around,
 <br>click [{{< fa chevron-right >}}]() to continue.
 
 :::
-
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
@@ -258,6 +261,9 @@ In order to log tests as a validator instead of as a developer, we'll need to ad
 :::
 
 ::::
+
+
+# Connect to a model {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## Get your code snippet
 
