Adding missing info from old training WIP

--- a/site/training/validator-fundamentals/finalizing-validation-reports.qmd
+++ b/site/training/validator-fundamentals/finalizing-validation-reports.qmd
@@ -72,7 +72,7 @@ First, let's make sure you can log in to {{< var vm.product >}}.
 
 ### Prerequisite courses
 
-To continue, you need to have been [onboarded](developer-fundamentals-register.qmd#register){target="_blank"} onto {{< var validmind.training >}} with the [**{{< fa circle-check >}} Validator**]{.bubble} role and completed the first three modules of this course:
+To continue, you need to have been [onboarded](validator-fundamentals-register.qmd#register){target="_blank"} onto {{< var validmind.training >}} with the [**{{< fa circle-check >}} Validator**]{.bubble} role and completed the first three modules of this course:
 
 <!-- IMPORTANT: USE THE .HTML PATH AND NOT THE .QMD PATH FOR THE REVEALJS OUTPUT -->
 
@@ -350,6 +350,8 @@ Comment threads
 :::
 
 {{< include /guide/model-documentation/_collaborate-with-others-activity.qmd >}}
+
+Have a question about the model? Collaborate with your developer right in the model documentation:
 
 ::: {.panel-tabset}
 
