--- a/site/training/validator-fundamentals/finalizing-validation-reports.qmd
+++ b/site/training/validator-fundamentals/finalizing-validation-reports.qmd
@@ -269,6 +269,119 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 # Review model findings {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
+## {.scrollable}
+
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+More on model findings
+
+::: {.f5 .nt2 .pl2 .mb4}
+(Scroll down for the full instructions.)
+:::
+
+::: {.tc}
+[Learn more ...](/guide/model-validation/working-with-model-findings.qmd){.button target="_blank"}
+
+:::
+
+<br>Try it **live** on the next pages. {{< fa hand-point-right >}}
+:::
+
+::: {.column width="70%" .bl .pl4 .f4}
+
+Along with adding findings directly via validation reports, you can also add findings during your review of documentation:
+
+::: {.panel-tabset}
+
+### Add finding via overview
+
+wip - single-source
+
+### Add finding via section
+
+wip - single-source
+
+:::
+
+:::
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
+
+::: {.fr .f5 .nr5 .pa5 .overlay}
+**Add a finding via documentation**
+
+WIP
+
+::: {.f5 .pl3 .pr3 .embed}
+WIP
+:::
+
+When you're done adding your findings,
+<br>click [{{< fa chevron-right >}}]() to continue.
+
+:::
+
+## {.scrollable}
+
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+Track issue resolution
+
+::: {.f5 .nt2 .pl2 .mb4}
+(Scroll down for the full instructions.)
+:::
+
+::: {.tc}
+[Learn more ...](/guide/model-validation/add-manage-model-findings.qmd#track-issue-resolution){.button target="_blank"}
+:::
+
+<br>Try it **live** on the next page. {{< fa hand-point-right >}}
+:::
+
+::: {.column width="70%" .bl .pl4 .f4}
+As you prepare your report, review open or past due findings, close resolved ones, or add a mitigation plan:
+
+### Update a model finding 
+
+{{< include /guide/model-validation/_track_issue_resolution.qmd >}}
+
+:::
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
+
+::: {.fr .f5 .nr5 .pa5 .overlay}
+**Close a model finding** WIP
+
+WIP
+
+::: {.f5 .pl3 .pr3 .embed}
+WIP
+:::
+
+When you're done navigating around,
+<br>click [{{< fa chevron-right >}}]() to continue.
+
+:::
+
+## {background-iframe="https://app.prod.validmind.ai/model-findings" background-interactive="true" data-preload="yes"}
+
+::: {.fr .f5 .nr5 .pa5 .overlay}
+**View all {{< fa triangle-exclamation >}} Model Findings** WIP
+
+WIP
+
+::: {.f5 .pl3 .pr3 .embed}
+WIP
+:::
+
+When you're done navigating around,
+<br>click [{{< fa chevron-right >}}]() to continue.
+
+:::
+
+
 
 # Submit report for approval {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
@@ -423,6 +536,23 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 ::::
 
 # View analytics {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+
+## {background-iframe="https://app.prod.validmind.ai/analytics" background-interactive="true" data-preload="yes"}
+
+:::: {.fr .f4 .mv6 .nr4 .pa4 .overlay}
+**{{< fa square-poll-vertical >}} Analytics** WIP
+
+Under **{{< fa square-poll-vertical >}} Analytics**, you can find:
+
+- Executive summaries
+- Model tracking
+- Risk assessments
+- Compliance review
+- Remediation tracking
+
+Explore existing reports, <br>then click [{{< fa chevron-right >}}]() to continue.
+::::
+
 
 
 # In summary {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
