--- a/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
+++ b/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
@@ -371,27 +371,50 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 # Review model documentation {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
+## {.scrollable .center}
+
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+**Document Overview**
+
+::: {.tc}
+[Learn more...](/guide/model-validation/review-model-documentation.qmd){.button target="_blank"}
+:::
+<br>
+
+Try it **live** on the next page. {{< fa hand-point-right >}}
+
+:::
+
+::: {.column width="70%" .bl .pl4 .f3}
+
+{{< include /guide/model-documentation/_model-documentation-overview.qmd >}}
+
+{{< include /guide/model-documentation/_review-model-documentation.qmd >}}
+
+
+:::
+::::
+
+
+
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-:::: {.fr .f4 .nr5 .pa4 .overlay}
+:::: {.fr .f5 .mv6 .nr5 .pa4 .overlay}
 **Explore sample model documentation**
 
 In a usual model lifecycle, a champion model <br>
 will have been submitted to you for validation <br>
 with completed model documentation.
 
-In this next section, we'll review our sample <br>
-model documentation template to familiarize <br>
-you with what the structure of documentation <br>
-could look like when presented to you for review:
+Here, review the empty sample model <br>
+documentation for the model you registered <br>
+earlier to familiarize you with what the structure <br>
+of documentation could look like when <br>
+presented to you for review.
 
 ::: {.f5 .pl3 .pr3 .embed}
-1. From the **{{< fa cubes >}} Inventory**, select the name of <br>
-your model you registered for this course to <br>
-open up the model details page.
-2. On the left sidebar that appears for your model, <br>
-click **{{< fa book-open >}} Documentation**.
-3. The structure of the model documentation reflects <br>
+The structure of the model documentation reflects <br>
 the documentation template applied to the model, <br>
 just like the validation report template.
 
